Adding link to the design system components page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Home | LiveWire</title>
     </head>
     <body>
-        
+        <p>While you're here, check out the <a href="components/index.html" title="Disign System Overview">components of the design system</a>.</p>
     </body>
 </html>
