Updating media component to mute and show controls

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         </section>
 
         <section class="media-section">
-            <video playsinline="" class="Video_video__9h5Ot" poster="https://livewire.widen.net/content/jpct9rfbog/web/home-page-2.0-video-poster.jpg" autoplay="" loop="">
+            <video playsinline="" class="Video_video__9h5Ot" poster="https://livewire.widen.net/content/jpct9rfbog/web/home-page-2.0-video-poster.jpg" autoplay="" loop="" muted="" controls="">
                 <source src="https://livewire.widen.net/content/2iufgdei87/mp4/230181_BrandHP_v02_PR422_mov_web_265.mp4" >
             </video>
             <a href="#!" class="button">See Our Vision</a>
