Fixing styling of stay-informed entry and submit button

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 </p>
             </div>
             <form class="stay-informed__form">
-                <input type="email" id="email" class="stay-informed__entry" placeholder="Enter your email">
+                <input type="email" id="email" class="stay-informed__entry" placeholder="Enter your email" required="">
                 <button type="submit">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 19"><path fill-rule="evenodd" d="M14.303 8.95 9.747 4.627l.801-.754L16.15 9.19l.4.378-.401.377-5.506 5.185-.798-.758 4.59-4.32H2.25v-1.1z" clip-rule="evenodd"></path></svg>
                 </button>
@@ -432,7 +432,7 @@
                     </p>
                 </div>
                 <form class="stay-informed__form">
-                    <input type="email" id="stay-informed-email" class="stay-informed__entry" placeholder="Enter your email">
+                    <input type="email" id="stay-informed-email" class="stay-informed__entry" placeholder="Enter your email" required="">
                     <button type="submit">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 19"><path fill-rule="evenodd" d="M14.303 8.95 9.747 4.627l.801-.754L16.15 9.19l.4.378-.401.377-5.506 5.185-.798-.758 4.59-4.32H2.25v-1.1z" clip-rule="evenodd"></path></svg>
                     </button>
