--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Home | LiveWire</title>
-        <link rel="stylesheet" href="../css/normalize.css" >
-        <link rel="stylesheet" href="../css/main.css" >
-        <link rel="stylesheet" href="../assets/fontawesome/css/fontawesome.min.css" >
-        <link rel="stylesheet" href="../assets/fontawesome/css/solid.min.css" >
-        <link rel="stylesheet" href="../assets/fontawesome/css/regular.min.css" >
-        <link rel="stylesheet" href="../assets/fontawesome/css/brands.min.css" >
+        <link rel="stylesheet" href="css/normalize.css" >
+        <link rel="stylesheet" href="css/main.css" >
+        <link rel="stylesheet" href="assets/fontawesome/css/fontawesome.min.css" >
+        <link rel="stylesheet" href="assets/fontawesome/css/solid.min.css" >
+        <link rel="stylesheet" href="assets/fontawesome/css/regular.min.css" >
+        <link rel="stylesheet" href="assets/fontawesome/css/brands.min.css" >
     </head>
     <body>
         <header class="page-header">
