--- a/index.html
+++ b/index.html
@@ -45,8 +45,111 @@
                     <img class="language-switcher__language" src="https://www.livewire.com/next-assets/icons/flags/US.svg" alt="Locale United States" width="24" height="18">
                     <p class="language-switcher__language">EN</p>
                 </div>
+                <div class="language-picker" id="language-picker">
+                    <div class="language-picker__header">
+                        <i class="fa-solid fa-x close"></i>
+                    </div>
+                    <ul class="language-picker__regions">
+                        <li class="region">
+                            <p>North America</p>
+                            <ul class="nations">
+                                <li class="nation nation--active">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/united-states_0_1.png" alt="United States" >
+                                    <div>
+                                        United States
+                                        <ul class="languages active">
+                                            <li class="language"><a href="#!">English</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/canada_0.png" alt="Canada" >
+                                    <div>
+                                        Canada
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">English</a></li>
+                                            <li class="language"><a href="#!">Français</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="region">
+                            <p>Europe</p>
+                            <ul class="nations">
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/germany_0_0_0.png" alt="Deutschland" >
+                                    <div>
+                                        Deutschland
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">Deutsch</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/spain_0.png" alt="España" >
+                                    <div>
+                                        España
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">Español</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/france_0_1.png" alt="France" >
+                                    <div>
+                                        France
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">Français</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/italy_0.png" alt="Italia" >
+                                    <div>
+                                        Italia
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">Italiano</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/netherlands_0_1.png" alt="Nederland" >
+                                    <div>
+                                        Nederland
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">Nederlands</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/switzerland_0_0.png" alt="Switzerland" >
+                                    <div>
+                                        Switzerland
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">Deutsch</a></li>
+                                            <li class="language"><a href="#!">Français</a></li>
+                                            <li class="language"><a href="#!">English</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/united-kingdom_0_1.png" alt="United Kingdom" >
+                                    <div>
+                                        United Kingdom
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">Enlish</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </header>
+
+
 
         <p class="banner"><a href="!#">FINANCING AS LOW AS 1.49% APR*</a><i class="fa-solid fa-x close"></i></p>
 
