Adding support menu dropdown

--- a/index.html
+++ b/index.html
@@ -26,9 +26,41 @@
                         <span>experience</span>
                         <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg>
                     </li>
-                    <li class="dropdown">
+                    <li class="dropdown" id="support-dropdown">
                         <span>support</span>
                         <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg>
+                        <div class="nav-main__sub-menu" id="support-menu">
+                            <ol class="sub-menu__categories">
+                                <li class="sub-menu__category">
+                                    <a href="#faqs">FAQS</a>
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </li>
+                                <li class="sub-menu__category sub-menu__category--active">
+                                    <a href="#app-info">App Info</a>
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </li>
+                                <li class="sub-menu__category">
+                                    <a href="#resources">Resources</a>
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </li>
+                            </ol>
+                            <div class="sub-menu__panel" >
+                                <ul class="app-list">
+                                    <li class="app-list__app">
+                                        <a href="#!" title="LiveWire S2 App">
+                                            <img src="https://livewire.widen.net/content/upk0bckcvy/web/lw-logo-megamenu-2.png?w=140&crop=yes" alt="LiveWire S2">
+                                            <p>LiveWire S2</p> 
+                                        </a>
+                                    </li>
+                                    <li class="app-list__app">
+                                        <a href="#!" title="LiveWire ONE">
+                                                <img src="https://livewire.widen.net/content/ormmxnfzot/web/lw-logo-megamenu-1.png?w=140&crop=yes" alt="LiveWire ONE">
+                                                <p>LiveWire ONE</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </li>
                     <li class="dropdown">
                         <span>shop</span>
@@ -484,12 +516,12 @@
             </ul>
         </section>
 
-        <section class="media-section">
+        <div class="media-section">
             <video playsinline="" class="Video_video__9h5Ot" poster="https://livewire.widen.net/content/jpct9rfbog/web/home-page-2.0-video-poster.jpg" autoplay="" loop="" muted="" controls="">
                 <source src="https://livewire.widen.net/content/2iufgdei87/mp4/230181_BrandHP_v02_PR422_mov_web_265.mp4" >
             </video>
             <a href="#!" class="button">See Our Vision</a>
-        </section>
+        </div>
 
         <p class="financial-disclaimer">*Financing offers available only on new S2 LiveWire motorcycles financed through Eaglemark Savings Bank (ESB) and subject to credit approval. Not all applicants will qualify. Stated offers are available only to high credit tier customers at ESB. The APR may vary based on the applicant’s past credit performance and the term of the loan. For example, a 2025 S2 Alpinista™ with an MSRP of $15,999, 10% down payment and amount financed of $14,399.10, 72-month repayment term, and 1.49% APR results in monthly payments of $209.18. For a 2024 S2 Del Mar® with an MSRP of $16,249, 10% down payment and amount financed of $14,624.10, 72-month repayment term, and 1.49% APR results in monthly payments of $212.45. For a 2024 S2 Mulholland™ with an MSRP of $16,499, 10% down payment and amount financed of $14,849.10, 72-month repayment term, and 1.49% APR results in monthly payments of $215.72. In these examples, customer is responsible for applicable taxes, title, licensing fees and any other fees or charges at the time of sale. APR is calculated according to the simple interest method. Not valid in conjunction with other offers. Other terms, conditions, and limitations may apply. See your LiveWire Dealership for details. This Financing Offer is valid during the period of March 1, 2025 - April 30, 2025.</p>
 
