Adding menu panel content for Experience - Locations

--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
                                     <i class="fa-solid fa-chevron-right"></i>
                                 </li>
                             </ol>
-                            <div class="sub-menu__panel" >
-                                
+                            <div class="sub-menu__panel sub-menu__panel--locations" >
+                                <img src="assets/img/google-map.png" alt="map" width="400"/>
+                                <a href="#!" class="button">Find Your Nearest Location</a>
                             </div>
                         </div>
                     </li>
