Adding menu panel content for motorcycles fleet

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg>
                         <div class="nav-main__sub-menu" id="motorcycles-dropdown">
                             <ol class="sub-menu__categories">
-                                <li class="sub-menu__category sub-menu__category--active">
+                                <li class="sub-menu__category">
                                     <a href="#faqs">S2 Alpinista™</a>
                                     <i class="fa-solid fa-chevron-right"></i>
                                 </li>
@@ -47,13 +47,14 @@
                                     <a href="#resources">Compare Our Bikes</a>
                                     <i class="fa-solid fa-chevron-right"></i>
                                 </li>
-                                <li class="sub-menu__category">
+                                <li class="sub-menu__category sub-menu__category--active">
                                     <a href="#resources">Fleet Opportunities</a>
                                     <i class="fa-solid fa-chevron-right"></i>
                                 </li>
                             </ol>
-                            <div class="sub-menu__panel" >
-                                
+                            <div class="sub-menu__panel sub-menu__panel--card" >
+                                <img width="400" src="https://livewire.widen.net/content/73jf0khhur/web/menu_fleet_oportunities.jpg?animate=true&w=2048&q=75" alt="" />
+                                <a href="#!" class="button">Learn More</a>
                             </div>
                         </div>
                     </li>
@@ -79,7 +80,7 @@
                                     <i class="fa-solid fa-chevron-right"></i>
                                 </li>
                             </ol>
-                            <div class="sub-menu__panel sub-menu__panel--locations" >
+                            <div class="sub-menu__panel sub-menu__panel--card" >
                                 <img src="assets/img/google-map.png" alt="map" width="400"/>
                                 <a href="#!" class="button">Find Your Nearest Location</a>
                             </div>
