--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg>
                         <div class="nav-main__sub-menu" id="shop-dropdown">
                             <ol class="sub-menu__categories">
-                                <li class="sub-menu__category sub-menu__category--active">
+                                <li class="sub-menu__category">
                                     <a href="#faqs">S2 Alpinista™</a>
                                     <i class="fa-solid fa-chevron-right"></i>
                                 </li>
@@ -143,7 +143,7 @@
                                     <a href="#!">LiveWire One</a>
                                     <i class="fa-solid fa-chevron-right"></i>
                                 </li>
-                                <li class="sub-menu__category">
+                                <li class="sub-menu__category sub-menu__category--active">
                                     <a href="#!">Apparel</a>
                                     <i class="fa-solid fa-chevron-right"></i>
                                 </li>
@@ -156,8 +156,10 @@
                                     <i class="fa-solid fa-chevron-right"></i>
                                 </li>
                             </ol>
-                            <div class="sub-menu__panel" >
-                                
+                            <div class="sub-menu__panel sub-menu__panel--card" >
+                                <img width="400" src="https://cdn11.bigcommerce.com/s-xlul1tix0y/products/238/images/727/1_LW_HO22_Big_Type_Crew_Front_Wide_J__72355.1670026856.220.290.jpg?c=1" alt="Big Type Crew" />
+                                <a href="#!">Big Type Crew</a>
+                                <a href="#!" class="button">Shop More</a>
                             </div>
                         </div>
                     </li>
